se agrega animaciones, estilos, cambios en UI/UX, seccion de contacto y se actualizan datos de los cuadros

--- a/proyect/Landing-page-mobileFirst/index.html
+++ b/proyect/Landing-page-mobileFirst/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml+jpg" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +17,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <title>Anicarlomagno</title>
+  <meta name="description" content="Página oficial de Analía Carlomagno, artista plástica.">
+  <meta name="author" content="Analía Carlomagno">
+  <meta property="og:title" content="Anicarlomagno">
+  <meta property="og:description" content="Página oficial de Analía Carlomagno, artista plástica.">
+  <meta property="og:image" content="https://www.google.com/search?sca_esv=dfa970682d15eccc&rlz=1C1GCEA_enAR871AR871&sxsrf=ADLYWIJRExQPcJ9gysF9pPWgXi70UVe_sw:1734143099947&q=ani+carlomagno&udm=2&fbs=AEQNm0CbCVgAZ5mWEJDg6aoPVcBgWizR0-0aFOH11Sb5tlNhdwTBRAFlvB_IDmZx89cGs2seX6PiZB2kyHkbjrZzaWjXYJQq5oTiYxXiff_TCg9Mzy5wD9pJ_XR6QV78w2yyXkX9isvw5mv68XEvNoo3neeZ4ohy3D3IHwAiJYYsHwHmadRXBHNLvU7YbvtsTfHneBEyE1fymvau0aBPUbzthv9U11EEfw&sa=X&ved=2ahUKEwiL8Ni7mqaKAxUcKrkGHe6ABLAQtKgLegQIGhAB&biw=1366&bih=607&dpr=1">
+  <meta property="og:url" content="https://anicarlomagno.vercel.app">
+  <meta name="twitter:card" content="summary_large_image">
+
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script> 
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
