Changed SEO, add paintings

--- a/proyect/Landing-page-mobileFirst/index.html
+++ b/proyect/Landing-page-mobileFirst/index.html
@@ -1,35 +1,48 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html lang="es" translate="no">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml+jpg" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="es">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  
+  <!-- Preconexiones optimizadas -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
-  <title>Anicarlomagno</title>
-  <meta name="description" content="Página oficial de Analía Carlomagno, artista plástica.">
-  <meta name="author" content="Analía Carlomagno">
-  <meta property="og:title" content="Anicarlomagno">
-  <meta property="og:description" content="Página oficial de Analía Carlomagno, artista plástica.">
-  <meta property="og:image" content="https://www.google.com/search?sca_esv=dfa970682d15eccc&rlz=1C1GCEA_enAR871AR871&sxsrf=ADLYWIJRExQPcJ9gysF9pPWgXi70UVe_sw:1734143099947&q=ani+carlomagno&udm=2&fbs=AEQNm0CbCVgAZ5mWEJDg6aoPVcBgWizR0-0aFOH11Sb5tlNhdwTBRAFlvB_IDmZx89cGs2seX6PiZB2kyHkbjrZzaWjXYJQq5oTiYxXiff_TCg9Mzy5wD9pJ_XR6QV78w2yyXkX9isvw5mv68XEvNoo3neeZ4ohy3D3IHwAiJYYsHwHmadRXBHNLvU7YbvtsTfHneBEyE1fymvau0aBPUbzthv9U11EEfw&sa=X&ved=2ahUKEwiL8Ni7mqaKAxUcKrkGHe6ABLAQtKgLegQIGhAB&biw=1366&bih=607&dpr=1">
-  <meta property="og:url" content="https://anicarlomagno.vercel.app">
-  <meta name="twitter:card" content="summary_large_image">
+  
+  <!-- Fuentes combinadas en un solo request -->
+  <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+  <!-- Meta tags esenciales SEO -->
+  <title>Analía Carlomagno | Artista Plástica</title>
+  <meta name="description" content="Página oficial de Analía Carlomagno, artista plástica. Obras, exposiciones y biografía.">
+  <meta name="author" content="Analía Carlomagno">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://anicarlomagno.vercel.app">
+  <meta property="og:title" content="Analía Carlomagno | Artista Plástica">
+  <meta property="og:description" content="Explora el mundo artístico de Analía Carlomagno. Obras únicas y exposiciones destacadas.">
+  <meta property="og:image" content="https://anicarlomagno.vercel.app/images/og-image.jpg">
+  <meta property="og:locale" content="es_ES">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Analía Carlomagno | Artista Plástica">
+  <meta name="twitter:description" content="Descubre la obra artística de Analía Carlomagno. Pinturas, esculturas y exposiciones.">
+  <meta name="twitter:image" content="https://anicarlomagno.vercel.app/images/twitter-image.jpg">
+  <meta name="twitter:site" content="@anicarlomagno">
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://anicarlomagno.vercel.app">
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="no-translate">
+  <div id="root" role="main"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
